platform/applications/shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nyc-fhv-ingress
  namespace: default 
  annotations:
    kubernetes.io/ingress.class: alb
    #ACM certificate for HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:501818865030:certificate/05961a2e-d26f-4b5f-975e-f78659ecc8af
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  rules:
    - host: css.redeploy.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
          - path: /drivers
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /stats
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
  tls: []
